--- a/charts/consul/templates/crd-meshes.yaml
+++ b/charts/consul/templates/crd-meshes.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: meshes.consul.hashicorp.com
   labels:
@@ -53,10 +53,80 @@ spec:
           metadata:
             type: object
           spec:
-            description: MeshSpec defines the desired state of Mesh
+            description: MeshSpec defines the desired state of Mesh.
             properties:
+              tls:
+                description: TLS defines the TLS configuration for the service mesh.
+                properties:
+                  incoming:
+                    description: Incoming defines the TLS configuration for inbound
+                      mTLS connections targeting the public listener on Connect and
+                      TerminatingGateway proxy kinds.
+                    properties:
+                      cipherSuites:
+                        description: CipherSuites sets the default list of TLS cipher
+                          suites to support when negotiating connections using TLS
+                          1.2 or earlier. If unspecified, Envoy will use a default
+                          server cipher list. The list of supported cipher suites
+                          can be seen in https://github.com/hashicorp/consul/blob/v1.11.2/types/tls.go#L154-L169
+                          and is dependent on underlying support in Envoy. Future
+                          releases of Envoy may remove currently-supported but insecure
+                          cipher suites, and future releases of Consul may add new
+                          supported cipher suites if any are added to Envoy.
+                        items:
+                          type: string
+                        type: array
+                      tlsMaxVersion:
+                        description: TLSMaxVersion sets the default maximum TLS version
+                          supported. Must be greater than or equal to `TLSMinVersion`.
+                          One of `TLS_AUTO`, `TLSv1_0`, `TLSv1_1`, `TLSv1_2`, or `TLSv1_3`.
+                          If unspecified, Envoy will default to TLS 1.3 as a max version
+                          for incoming connections.
+                        type: string
+                      tlsMinVersion:
+                        description: TLSMinVersion sets the default minimum TLS version
+                          supported. One of `TLS_AUTO`, `TLSv1_0`, `TLSv1_1`, `TLSv1_2`,
+                          or `TLSv1_3`. If unspecified, Envoy v1.22.0 and newer will
+                          default to TLS 1.2 as a min version, while older releases
+                          of Envoy default to TLS 1.0.
+                        type: string
+                    type: object
+                  outgoing:
+                    description: Outgoing defines the TLS configuration for outbound
+                      mTLS connections dialing upstreams from Connect and IngressGateway
+                      proxy kinds.
+                    properties:
+                      cipherSuites:
+                        description: CipherSuites sets the default list of TLS cipher
+                          suites to support when negotiating connections using TLS
+                          1.2 or earlier. If unspecified, Envoy will use a default
+                          server cipher list. The list of supported cipher suites
+                          can be seen in https://github.com/hashicorp/consul/blob/v1.11.2/types/tls.go#L154-L169
+                          and is dependent on underlying support in Envoy. Future
+                          releases of Envoy may remove currently-supported but insecure
+                          cipher suites, and future releases of Consul may add new
+                          supported cipher suites if any are added to Envoy.
+                        items:
+                          type: string
+                        type: array
+                      tlsMaxVersion:
+                        description: TLSMaxVersion sets the default maximum TLS version
+                          supported. Must be greater than or equal to `TLSMinVersion`.
+                          One of `TLS_AUTO`, `TLSv1_0`, `TLSv1_1`, `TLSv1_2`, or `TLSv1_3`.
+                          If unspecified, Envoy will default to TLS 1.3 as a max version
+                          for incoming connections.
+                        type: string
+                      tlsMinVersion:
+                        description: TLSMinVersion sets the default minimum TLS version
+                          supported. One of `TLS_AUTO`, `TLSv1_0`, `TLSv1_1`, `TLSv1_2`,
+                          or `TLSv1_3`. If unspecified, Envoy v1.22.0 and newer will
+                          default to TLS 1.2 as a min version, while older releases
+                          of Envoy default to TLS 1.0.
+                        type: string
+                    type: object
+                type: object
               transparentProxy:
-                description: TransparentProxyMeshConfig controls configuration specific
+                description: TransparentProxy controls the configuration specific
                   to proxies in "transparent" mode. Added in v1.10.0.
                 properties:
                   meshDestinationsOnly:
