--- a/charts/consul/templates/crd-proxydefaults.yaml
+++ b/charts/consul/templates/crd-proxydefaults.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: proxydefaults.consul.hashicorp.com
   labels:
@@ -55,7 +55,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: ProxyDefaultsSpec defines the desired state of ProxyDefaults
+            description: ProxyDefaultsSpec defines the desired state of ProxyDefaults.
             properties:
               config:
                 description: Config is an arbitrary map of configuration values used
