--- a/charts/consul/templates/crd-servicedefaults.yaml
+++ b/charts/consul/templates/crd-servicedefaults.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: servicedefaults.consul.hashicorp.com
   labels:
@@ -55,7 +55,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: ServiceDefaultsSpec defines the desired state of ServiceDefaults
+            description: ServiceDefaultsSpec defines the desired state of ServiceDefaults.
             properties:
               expose:
                 description: Expose controls the default expose path configuration
