--- a/charts/consul/templates/crd-serviceresolvers.yaml
+++ b/charts/consul/templates/crd-serviceresolvers.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: serviceresolvers.consul.hashicorp.com
   labels:
@@ -55,7 +55,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: ServiceResolverSpec defines the desired state of ServiceResolver
+            description: ServiceResolverSpec defines the desired state of ServiceResolver.
             properties:
               connectTimeout:
                 description: ConnectTimeout is the timeout for establishing new network
