--- a/control-plane/config/crd/bases/consul.hashicorp.com_exportedservices.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_exportedservices.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: exportedservices.consul.hashicorp.com
 spec:
@@ -49,7 +48,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: ExportedServicesSpec defines the desired state of ExportedServices
+            description: ExportedServicesSpec defines the desired state of ExportedServices.
             properties:
               services:
                 description: Services is a list of services to be exported and the
