--- a/control-plane/config/crd/bases/consul.hashicorp.com_serviceintentions.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_serviceintentions.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: serviceintentions.consul.hashicorp.com
 spec:
@@ -49,7 +48,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: ServiceIntentionsSpec defines the desired state of ServiceIntentions
+            description: ServiceIntentionsSpec defines the desired state of ServiceIntentions.
             properties:
               destination:
                 description: Destination is the intention destination that will have
