--- a/control-plane/config/crd/bases/consul.hashicorp.com_serviceresolvers.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_serviceresolvers.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: serviceresolvers.consul.hashicorp.com
 spec:
@@ -49,7 +48,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: ServiceResolverSpec defines the desired state of ServiceResolver
+            description: ServiceResolverSpec defines the desired state of ServiceResolver.
             properties:
               connectTimeout:
                 description: ConnectTimeout is the timeout for establishing new network
