--- a/control-plane/config/crd/bases/consul.hashicorp.com_terminatinggateways.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_terminatinggateways.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: terminatinggateways.consul.hashicorp.com
 spec:
@@ -50,14 +49,14 @@ spec:
           metadata:
             type: object
           spec:
-            description: TerminatingGatewaySpec defines the desired state of TerminatingGateway
+            description: TerminatingGatewaySpec defines the desired state of TerminatingGateway.
             properties:
               services:
                 description: Services is a list of service names represented by the
                   terminating gateway.
                 items:
                   description: A LinkedService is a service represented by a terminating
-                    gateway
+                    gateway.
                   properties:
                     caFile:
                       description: CAFile is the optional path to a CA certificate
