--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
       - main
       # Push events to branches matching refs/heads/release/**
       - "release/**"
+      - "cb/crt-testing"
 
 env:
   PKG_NAME: "consul-k8s-control-plane"
