--- a/charts/consul/templates/client-daemonset.yaml
+++ b/charts/consul/templates/client-daemonset.yaml
@@ -285,22 +285,22 @@ spec:
                 -hcl='leave_on_terminate = true' \
                 {{- if .Values.global.tls.enabled }}
                 {{- if .Values.global.secretsBackend.vault.enabled }}
-                -hcl='ca_file = "/vault/secrets/serverca.crt"' \
+                -hcl='tls { defaults { ca_file = "/vault/secrets/serverca.crt" }}' \
                 {{- else }}
-                -hcl='ca_file = "/consul/tls/ca/tls.crt"' \
+                -hcl='tls { defaults { ca_file = "/consul/tls/ca/tls.crt" }}' \
                 {{- end }}
                 {{- if .Values.global.tls.enableAutoEncrypt }}
                 -hcl='auto_encrypt = {tls = true}' \
                 -hcl="auto_encrypt = {ip_san = [\"$HOST_IP\",\"$POD_IP\"]}" \
                 {{- else }}
-                -hcl='cert_file = "/consul/tls/client/tls.crt"' \
-                -hcl='key_file = "/consul/tls/client/tls.key"' \
+                -hcl='tls { defaults { cert_file = "/consul/tls/client/tls.crt" }}' \
+                -hcl='tls { defaults { key_file = "/consul/tls/client/tls.key" }}' \
                 {{- end }}
                 {{- if .Values.global.tls.verify }}
-                -hcl='verify_outgoing = true' \
+                -hcl='tls { defaults { verify_outgoing = true }}' \
                 {{- if not .Values.global.tls.enableAutoEncrypt }}
-                -hcl='verify_incoming_rpc = true' \
-                -hcl='verify_server_hostname = true' \
+                -hcl='tls { internal_rpc { verify_incoming = true }}' \
+                -hcl='tls { internal_rpc { verify_server_hostname = true }}' \
                 {{- end }}
                 {{- end }}
                 -hcl='ports { https = 8501 }' \
