--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -329,7 +329,7 @@ global:
     serverAdditionalIPSANs: []
 
     # If true, `verify_outgoing`, `verify_server_hostname`,
-    # and `verify_incoming_rpc` will be set to `true` for Consul servers and clients.
+    # and `verify_incoming` for internal RPC communication will be set to `true` for Consul servers and clients.
     # Set this to false to incrementally roll out TLS on an existing Consul cluster.
     # Please see https://consul.io/docs/k8s/operations/tls-on-existing-cluster
     # for more details.
