Adding Acceptance test for Auto Reload Config (#1135)
* Adding Acceptance test for Auto Reload Config

* removing auto_config_reload from acceptance test configuration

* Setting auto_reload_config to true on client and server config maps

* Add tests for port 8502 and 8300

* removing grpc from test

* fixing checksum in tests for server and client

* fixing some formating and comments

* PR Feedback

--- a/charts/consul/templates/client-config-configmap.yaml
+++ b/charts/consul/templates/client-config-configmap.yaml
@@ -13,6 +13,10 @@ metadata:
     release: {{ .Release.Name }}
     component: client
 data:
+  client.json: |-
+    {
+      "auto_reload_config": true
+    }
   extra-from-values.json: |-
 {{ tpl .Values.client.extraConfig . | trimAll "\"" | indent 4 }}
   central-config.json: |-
