--- a/charts/consul/Chart.yaml
+++ b/charts/consul/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: consul
-version: 0.42.0
-appVersion: 1.11.4
+version: 0.43.0
+appVersion: 1.12.0
 kubeVersion: ">=1.19.0-0"
 description: Official HashiCorp Consul Chart
 home: https://www.consul.io
@@ -13,11 +13,11 @@ annotations:
   artifacthub.io/prerelease: false
   artifacthub.io/images: |
     - name: consul
-      image: hashicorp/consul:1.11.4
+      image: hashicorp/consul:1.12.0
     - name: consul-k8s-control-plane
-      image: hashicorp/consul-k8s-control-plane:0.42.0
+      image: hashicorp/consul-k8s-control-plane:0.43.0
     - name: envoy
-      image: envoyproxy/envoy-alpine:v1.20.2
+      image: envoyproxy/envoy:v1.22.0
   artifacthub.io/license: MPL-2.0
   artifacthub.io/links: |
     - name: Documentation
