Adding acceptance test for Vault Namespaces (#1171)
* Adding acceptance test for Vault Namespaces

* Removing unused function that was added during development

* fixing linting

* removing remnant from test

* Apply suggestions from code review

Co-authored-by: Iryna Shustava <ishustava@users.noreply.github.com>

* adding consul-ci context to acceptance and acceptance-tproxy jobs so that VAULT_LICENSE is available.

* FIXING vault license to be at VAULT_LICENSE instead of VAULT_ENT_LICENSE

Co-authored-by: Iryna Shustava <ishustava@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -900,9 +900,11 @@ workflows:
             - build-distros-amd64
       # Run acceptance tests using the docker image built for the control plane
       - acceptance:
+          context: consul-ci
           requires:
             - dev-upload-docker
       - acceptance-tproxy:
+          context: consul-ci
           requires:
             - dev-upload-docker
   nightly-acceptance-tests:
