--- a/charts/consul/templates/client-daemonset.yaml
+++ b/charts/consul/templates/client-daemonset.yaml
@@ -503,7 +503,7 @@ spec:
           - mountPath: /consul/login
             name: consul-data
             readOnly: false
-          {{- if (and (not .Values.global.secretsBackend.vault.enabled) (not .Values.externalServers.useSystemRoots)) }}
+          {{- if (and .Values.global.tls.enabled (not .Values.global.secretsBackend.vault.enabled) (not .Values.externalServers.useSystemRoots)) }}
           - name: consul-ca-cert
             mountPath: /consul/tls/ca
             readOnly: false
