Fix autogen gossip name mismatch (#1196)
* Match release name when looking for autogenerated gossip encryption key

* s/Secet/Secret/g

* Add CHANGELOG entry

* Update CHANGELOG.md

Co-authored-by: Luke Kysow <1034429+lkysow@users.noreply.github.com>

Co-authored-by: Luke Kysow <1034429+lkysow@users.noreply.github.com>

--- a/charts/consul/templates/create-federation-secret-job.yaml
+++ b/charts/consul/templates/create-federation-secret-job.yaml
@@ -82,7 +82,7 @@ spec:
         {{- else if .Values.global.gossipEncryption.autoGenerate }}
         - name: gossip-encryption-key
           secret:
-            secretName: consul-gossip-encryption-key
+            secretName: {{ template "consul.fullname" . }}-gossip-encryption-key
             items:
               - key: key
                 path: gossip.key
