Add support for ACLs for sync catalog and partitions. (#1180)
* Add support for ACLs for sync catalog and partitions.

--- a/charts/consul/templates/sync-catalog-deployment.yaml
+++ b/charts/consul/templates/sync-catalog-deployment.yaml
@@ -170,6 +170,9 @@ spec:
                 {{- if .Values.syncCatalog.consulNodeName }}
                 -consul-node-name={{ .Values.syncCatalog.consulNodeName }} \
                 {{- end }}
+                {{- if .Values.global.adminPartitions.enabled }}
+                -partition={{ .Values.global.adminPartitions.name }} \
+                {{- end }}
                 {{- if .Values.syncCatalog.consulPrefix}}
                 -consul-service-prefix="{{ .Values.syncCatalog.consulPrefix}}" \
                 {{- end}}
