Correct webhook-cert-manager-clusterrole to utilize the web-cert-manager podsecuritypolicy rather than connect-injectors when global.EnablePodSecurityPolicies is true. (#1202)
* add podsecuritypolicy use for webhook-cert-manager to the clusterrole.

* Updating clusterrole to remove the incorrect psp.   Adding changelog.

* Update CHANGELOG.md

Co-authored-by: Luke Kysow <1034429+lkysow@users.noreply.github.com>

Co-authored-by: Luke Kysow <1034429+lkysow@users.noreply.github.com>

--- a/charts/consul/templates/webhook-cert-manager-clusterrole.yaml
+++ b/charts/consul/templates/webhook-cert-manager-clusterrole.yaml
@@ -45,7 +45,7 @@ rules:
   resources:
   - podsecuritypolicies
   resourceNames:
-  - {{ template "consul.fullname" . }}-connect-injector
+  - {{ template "consul.fullname" . }}-webhook-cert-manager
   verbs:
   - use
 {{- end }}
