Enable the ability to configure the ClientTimeout of the http client that interacts with the Consul API (#1178)
* Providing endpoints controller with an http client with a timeout

* handling TLS transport when providing our own httpCLient

* importing consul client change from a branch where transport gets properly set.

* ran go mod tidy

* Removing transport remnant

* getting latest changes from consul work

* using exposed methods to set config

* adding checks to functions

* Adding unit test

* Revising test after enabling the consul side just to process transport when new is passed with a config that contains an http client.

* Updating to latest changes in Consul

* Centralizing timeout in control-plane/consul.NewClient

* fix remnants

* Using latest version of changes in consul where SetClientConfig() and SetClientTransportWithTLSConfig() have been exposed to allow getting access to Transport and TLSConfig defaulting when passing in your own http client.

* Updating acceptance test to haveright message

* Changing back to 2 seconds

* fixing test

* Added flags for configuration of timeout to commands

* Fix broken test

* Adding validation that consul-api-timeout is greater than zero

* Fixing 100 broken tests

* fix broken tests 2:electric bugaloo

* fixing tests 3

* fixing sidecar command test

* Adding tests and logic for acl-init and server-acl init jobs and containers to have pass in consul-api-timeout flag

* fixing more tests

* Adding tests and logic for deployments using consul-logout to  have pass in consul-api-timeout flag

* fixing enterprise tests

* Adding tests and logic for create-federation-secret-job to  pass in consul-api-timeout flag

* fixing enterprise tests

* setting -consul-api-timeout on all jobs and deployments that use get-auto-encrypt-client-ca

* moding bats and helm charts for the rest of the jobs and deployments

* fixing two broken enterprise tests

* fixi

--- a/charts/consul/templates/api-gateway-controller-deployment.yaml
+++ b/charts/consul/templates/api-gateway-controller-deployment.yaml
@@ -205,6 +205,7 @@ spec:
             {{- if .Values.global.adminPartitions.enabled }}
             -partition={{ .Values.global.adminPartitions.name }} \
             {{- end }}
+            -consul-api-timeout={{ .Values.global.consulAPITimeout }} \
             -log-level={{ default .Values.global.logLevel .Values.apiGateway.logLevel }} \
             -log-json={{ .Values.global.logJSON }}
         resources:
