--- a/charts/consul/templates/create-federation-secret-job.yaml
+++ b/charts/consul/templates/create-federation-secret-job.yaml
@@ -147,7 +147,8 @@ spec:
                   -k8s-namespace="${NAMESPACE}" \
                   -resource-prefix="{{ template "consul.fullname" . }}" \
                   -server-ca-cert-file=/consul/tls/ca/tls.crt \
-                  -server-ca-key-file=/consul/tls/server/ca/tls.key
+                  -server-ca-key-file=/consul/tls/server/ca/tls.key \
+                  -consul-api-timeout={{ .Values.global.consulAPITimeout }}
           resources:
             requests:
               memory: "50Mi"
