--- a/charts/consul/templates/enterprise-license-job.yaml
+++ b/charts/consul/templates/enterprise-license-job.yaml
@@ -124,7 +124,8 @@ spec:
           - |
             consul-k8s-control-plane acl-init \
               -secret-name="{{ template "consul.fullname" . }}-enterprise-license-acl-token" \
-              -k8s-namespace={{ .Release.Namespace }}
+              -k8s-namespace={{ .Release.Namespace }} \
+              -consul-api-timeout={{ .Values.global.consulAPITimeout }}
         resources:
           requests:
             memory: "25Mi"
