Enable auto_reload_config only when Vault is enabled. (#1213)

--- a/charts/consul/templates/client-config-configmap.yaml
+++ b/charts/consul/templates/client-config-configmap.yaml
@@ -15,7 +15,9 @@ metadata:
 data:
   client.json: |-
     {
+      {{- if and .Values.global.secretsBackend.vault.enabled }}
       "auto_reload_config": true
+      {{- end }}
     }
   extra-from-values.json: |-
 {{ tpl .Values.client.extraConfig . | trimAll "\"" | indent 4 }}
