Revert 1.12 TLS config to ensure 1.11 image is also supported. (#1218)
- Revert this commit when we want to stop supporting 1.11 style TLS
  config and migrate to 1.12 style TLS config.

--- a/charts/consul/templates/server-config-configmap.yaml
+++ b/charts/consul/templates/server-config-configmap.yaml
@@ -86,32 +86,24 @@ data:
   {{- if .Values.global.tls.enabled }}
   tls-config.json: |-
     {
-      "tls": {
-        {{- if .Values.global.tls.verify }}
-        "internal_rpc": {
-          "verify_incoming": true,
-          "verify_server_hostname": true
-        },
-        {{- end }}
-        "defaults": {
-          {{- if .Values.global.tls.verify }}
-          "verify_outgoing": true,
-          {{- end }}
-          {{- if .Values.global.secretsBackend.vault.enabled }}
-          "ca_file": "/vault/secrets/serverca.crt",
-          "cert_file": "/vault/secrets/servercert.crt",
-          "key_file": "/vault/secrets/servercert.key"
-          {{- else }}
-          "ca_file": "/consul/tls/ca/tls.crt",
-          "cert_file": "/consul/tls/server/tls.crt",
-          "key_file": "/consul/tls/server/tls.key"
-          {{- end }}
-        }
-      },
+       {{- if .Values.global.secretsBackend.vault.enabled }}
+       "ca_file": "/vault/secrets/serverca.crt",
+       "cert_file": "/vault/secrets/servercert.crt",
+       "key_file": "/vault/secrets/servercert.key",
+       {{- else }}
+       "ca_file": "/consul/tls/ca/tls.crt",
+       "cert_file": "/consul/tls/server/tls.crt",
+       "key_file": "/consul/tls/server/tls.key",
+       {{- end }}
       {{- if .Values.global.tls.enableAutoEncrypt }}
       "auto_encrypt": {
         "allow_tls": true
       },
+      {{- end }}
+      {{- if .Values.global.tls.verify }}
+      "verify_incoming_rpc": true,
+      "verify_outgoing": true,
+      "verify_server_hostname": true,
       {{- end }}
       "ports": {
         {{- if .Values.global.tls.httpsOnly }}
