Add topology spread constraints to mesh term and ingress gw (#1257)
* add topology spread constraints to mesh,  ingress and terminating gateways.

--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -2303,6 +2303,27 @@ meshGateway:
   # @type: string
   tolerations: null
 
+  # Pod topology spread constraints for mesh gateway pods.
+  # This should be a multi-line YAML string matching the `topologySpreadConstraints` array
+  # (https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/) in a Pod Spec.
+  #
+  # This requires K8S >= 1.18 (beta) or 1.19 (stable).
+  #
+  # Example:
+  #
+  # ```yaml
+  # topologySpreadConstraints: |
+  #   - maxSkew: 1
+  #     topologyKey: topology.kubernetes.io/zone
+  #     whenUnsatisfiable: DoNotSchedule
+  #     labelSelector:
+  #       matchLabels:
+  #         app: {{ template "consul.name" . }}
+  #         release: "{{ .Release.Name }}"
+  #         component: mesh-gateway
+  # ```
+  topologySpreadConstraints: ""
+
   # Optional YAML string to specify a nodeSelector config.
   # @type: string
   nodeSelector: null
@@ -2433,6 +2454,27 @@ ingressGateways:
     # @type: string
     tolerations: null
 
+    # Pod topology spread constraints for ingress gateway pods.
+    # This should be a multi-line YAML string matching the `topologySpreadConstraints` array
+    # (https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/) in a Pod Spec.
+    #
+    # This requires K8S >= 1.18 (beta) or 1.19 (stable).
+    #
+    # Example:
+    #
+    # ```yaml
+    # topologySpreadConstraints: |
+    #   - maxSkew: 1
+    #     topologyKey: topology.kubernetes.io/zone
+    #     whenUnsatisfiable: DoNotSchedule
+    #     labelSelector:
+    #       matchLabels:
+    #         app: {{ template "consul.name" . }}
+    #         release: "{{ .Release.Name }}"
+    #         component: ingress-gateway
+    # ```
+    topologySpreadConstraints: ""
+
     # Optional YAML string to specify a nodeSelector config.
     # @type: string
     nodeSelector: null
@@ -2545,6 +2587,27 @@ terminatingGateways:
     # Optional YAML string to specify tolerations.
     # @type: string
     tolerations: null
+
+    # Pod topology spread constraints for terminating gateway pods.
+    # This should be a multi-line YAML string matching the `topologySpreadConstraints` array
+    # (https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/) in a Pod Spec.
+    #
+    # This requires K8S >= 1.18 (beta) or 1.19 (stable).
+    #
+    # Example:
+    #
+    # ```yaml
+    # topologySpreadConstraints: |
+    #   - maxSkew: 1
+    #     topologyKey: topology.kubernetes.io/zone
+    #     whenUnsatisfiable: DoNotSchedule
+    #     labelSelector:
+    #       matchLabels:
+    #         app: {{ template "consul.name" . }}
+    #         release: "{{ .Release.Name }}"
+    #         component: terminating-gateway
+    # ```
+    topologySpreadConstraints: ""
 
     # Optional YAML string to specify a nodeSelector config.
     # @type: string
